examples/datalog/18_advanced_patterns/92_filter_by_agg.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_filter_agg
Knowledge graph 'test_filter_agg' created.
Switched to knowledge graph: test_filter_agg
> .kg use test_filter_agg
Switched to knowledge graph: test_filter_agg
> +orders[("A", 100), ("A", 200), ("B", 50), ("B", 60), ("B", 70), ("C", 500)].
Inserted 6 fact(s) into 'orders'.
> total_per_cust(Cust, <SUM:Amount>) :- orders(Cust, Amount).
Script error: Parse error: Unknown aggregate function: 
